# esp32-sensing-robot

./: .gitignore  LICENSE  README.md
capstone-controller/: CMakeLists.txt  sdkconfig  sdkconfig.old
capstone-controller/components/espressif__esp_lvgl_port/src/lvgl9/: esp_lvgl_port_button.c  esp_lvgl_port_disp.c
capstone-controller/components/espressif__mpu6050/: mpu6050.c
capstone-controller/components/espressif__mpu6050/include/: mpu6050.h
capstone-controller/components/lvgl__lvgl/: lv_conf_temp.h
capstone-controller/main/: CMakeLists.txt  display.c  display.h  idf_component.yml  main.c
capstone-robot/: CMakeLists.txt  sdkconfig  sdkconfig.old
capstone-robot/components/bme680/: CMakeLists.txt  bme680.c  bme680.h  bme68x.c
capstone-robot/components/espressif__bh1750/: bh1750.c
capstone-robot/components/espressif__bh1750/include/: bh1750.h
capstone-robot/components/generic_helper/: CMakeLists.txt  helper.h
capstone-robot/components/hy_srf05/: CMakeLists.txt  hy_srf05.c  hy_srf05.h
capstone-robot/main/: CMakeLists.txt  Kconfig  entry.c  idf_component.yml  main_controller.c  main_controller.h  motor_controller.c  motor_controller.h  sensors_controller.c  sensors_controller.h  wifi_controller.c  wifi_controller.h
capstone-robot/motor_control_testing/: motor_test.py
